--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,29 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
+}
+.navigation {
+    display: flex;
+    height: 100%;
+    width: 150px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    padding-top: 60px;
+  }
+  .card{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+  }
+
+
+  
+ 
