--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    background-color: purple;
 }
 .navigation {
     display: flex;
@@ -17,7 +17,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
